src/parser/y.output
State 71 conflicts: 1 shift/reduce


Grammar

    0 $accept: start_rule $end

    1 start_rule: set_up_section program_body

    2 program_body: statement_list
    3             | ε

    4 set_up_section: ε
    5               | set_up_section function_declaration
    6               | set_up_section set_statement

    7 $@1: ε

    8 function_declaration: $@1 FUNC IDENTIFIER '(' parameter_list ';' declaration_specifier ')' compound_statement

    9 parameter_list: parameter
   10               | parameter_list ',' parameter

   11 parameter: declaration_specifier IDENTIFIER

   12 set_statement: SET INT SMALL ';'
   13              | SET INT BIG ';'
   14              | SET FLOAT SMALL ';'
   15              | SET FLOAT BIG ';'

   16 primary_expression: '(' expression ')'
   17                   | CONSTANT

   18 function_call: IDENTIFIER '(' ')'
   19              | IDENTIFIER '(' argument_expression_list ')'

   20 argument_expression_list: expression
   21                         | argument_expression_list ',' expression

   22 map_array: '[' expression ']'
   23          | map_array '[' expression ']'

   24 lhs_expression: IDENTIFIER
   25               | IDENTIFIER map_array

   26 postfix_expression: lhs_expression
   27                   | function_call map_array
   28                   | function_call
   29                   | primary_expression

   30 unary_expression: NOT unary_expression
   31                 | '~' unary_expression
   32                 | '-' unary_expression
   33                 | '+' unary_expression
   34                 | SIZE '[' postfix_expression ']'
   35                 | postfix_expression

   36 multiplicative_expression: unary_expression
   37                          | multiplicative_expression '*' unary_expression
   38                          | multiplicative_expression '/' unary_expression
   39                          | multiplicative_expression '%' unary_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression '-' multiplicative_expression
   42                    | additive_expression '+' multiplicative_expression

   43 relational_expression: additive_expression
   44                      | relational_expression '<' additive_expression
   45                      | relational_expression '>' additive_expression
   46                      | relational_expression LE_OP additive_expression
   47                      | relational_expression GE_OP additive_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQ_OP relational_expression
   50                    | equality_expression NE_OP relational_expression

   51 and_expression: equality_expression
   52               | and_expression '&' equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression '^' and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression '|' exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR logical_and_expression

   61 expression: logical_or_expression

   62 assignment_statement: expression
   63                     | lhs_expression '=' expression

   64 declaration_statement: declaration_specifier init_declarator_list ';'

   65 declaration_specifier: type_specifier
   66                      | '[' declaration_specifier ']'
   67                      | '{' declaration_specifier ':' declaration_specifier '}'

   68 init_declarator_list: init_declarator
   69                     | init_declarator_list ',' init_declarator

   70 init_declarator: declarator
   71                | declarator '=' initializer

   72 type_specifier: INT
   73               | FLOAT
   74               | INT CONST
   75               | FLOAT CONST

   76 declarator: IDENTIFIER

   77 initializer: assignment_statement

   78 push_pop_statement: IDENTIFIER BACKWARD_ACCESS '[' expression ']'
   79                   | IDENTIFIER map_array BACKWARD_ACCESS '[' expression ']'
   80                   | '[' expression ']' FORWARD_ACCESS IDENTIFIER
   81                   | '[' expression ']' FORWARD_ACCESS IDENTIFIER map_array
   82                   | IDENTIFIER FORWARD_ACCESS '[' expression ']'
   83                   | IDENTIFIER map_array FORWARD_ACCESS '[' expression ']'
   84                   | '[' lhs_expression ']' BACKWARD_ACCESS IDENTIFIER
   85                   | '[' lhs_expression ']' BACKWARD_ACCESS IDENTIFIER map_array
   86                   | IDENTIFIER FORWARD_ACCESS '[' ']'
   87                   | IDENTIFIER map_array FORWARD_ACCESS '[' ']'
   88                   | '[' ']' BACKWARD_ACCESS IDENTIFIER
   89                   | '[' ']' BACKWARD_ACCESS IDENTIFIER map_array

   90 compound_statement: '<' '>'
   91                   | '<' statement_list '>'

   92 expression_statement: ';'
   93                     | expression ';'

   94 $@2: ε

   95 loop_statement: $@2 iteration_statement

   96 iteration_statement: LOOP '(' assignment_statement ';' expression_statement assignment_statement ')' ':' compound_statement
   97                    | LOOP '(' assignment_statement ';' expression_statement assignment_statement ')' ':' compound_statement FINALLY ':' statement
   98                    | LOOP '(' declaration_statement expression_statement assignment_statement ')' ':' compound_statement
   99                    | LOOP '(' declaration_statement expression_statement assignment_statement ')' ':' compound_statement FINALLY ':' statement
  100                    | LOOP '(' ';' expression_statement assignment_statement ')' ':' compound_statement
  101                    | LOOP '(' ';' expression_statement assignment_statement ')' ':' compound_statement FINALLY ':' statement

  102 return_statement: RETURN VOID
  103                 | RETURN expression

  104 print_statement: PRINT '(' expression ')'

  105 chaining_if_else: expression '?' statement_list
  106                 | expression '?' statement_list ELSE ':' statement_list
  107                 | expression '?' statement_list chaining_if_else

  108 if_else_statement: '<' chaining_if_else '>'

  109 statement: assignment_statement ';'
  110          | compound_statement
  111          | loop_statement
  112          | return_statement ';'
  113          | print_statement ';'
  114          | push_pop_statement ';'
  115          | if_else_statement
  116          | declaration_statement

  117 statement_list: statement
  118               | statement_list statement


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 39
    '&' (38) 52
    '(' (40) 8 16 18 19 96 97 98 99 100 101 104
    ')' (41) 8 16 18 19 96 97 98 99 100 101 104
    '*' (42) 37
    '+' (43) 33 42
    ',' (44) 10 21 69
    '-' (45) 32 41
    '/' (47) 38
    ':' (58) 67 96 97 98 99 100 101 106
    ';' (59) 8 12 13 14 15 64 92 93 96 97 100 101 109 112 113 114
    '<' (60) 44 90 91 108
    '=' (61) 63 71
    '>' (62) 45 90 91 108
    '?' (63) 105 106 107
    '[' (91) 22 23 34 66 78 79 80 81 82 83 84 85 86 87 88 89
    ']' (93) 22 23 34 66 78 79 80 81 82 83 84 85 86 87 88 89
    '^' (94) 54
    '{' (123) 67
    '|' (124) 56
    '}' (125) 67
    '~' (126) 31
    error (256)
    IDENTIFIER (258) 8 11 18 19 24 25 76 78 79 80 81 82 83 84 85 86 87 88 89
    CONSTANT (259) 17
    OR (260) 60
    AND (261) 58
    NOT (262) 30
    LE_OP (263) 46
    GE_OP (264) 47
    NE_OP (265) 50
    EQ_OP (266) 49
    FORWARD_ACCESS (267) 80 81 82 83 86 87
    BACKWARD_ACCESS (268) 78 79 84 85 88 89
    INT (269) 12 13 72 74
    FLOAT (270) 14 15 73 75
    BIG (271) 13 15
    SMALL (272) 12 14
    CONST (273) 74 75
    VOID (274) 102
    SET (275) 12 13 14 15
    ELSE (276) 106
    SIZE (277) 34
    LOOP (278) 96 97 98 99 100 101
    FINALLY (279) 97 99 101
    RETURN (280) 102 103
    FUNC (281) 8
    PRINT (282) 104


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    start_rule (51)
        on left: 1
        on right: 0
    program_body (52)
        on left: 2 3
        on right: 1
    set_up_section (53)
        on left: 4 5 6
        on right: 1 5 6
    function_declaration (54)
        on left: 8
        on right: 5
    $@1 (55)
        on left: 7
        on right: 8
    parameter_list (56)
        on left: 9 10
        on right: 8 10
    parameter (57)
        on left: 11
        on right: 9 10
    set_statement (58)
        on left: 12 13 14 15
        on right: 6
    primary_expression (59)
        on left: 16 17
        on right: 29
    function_call (60)
        on left: 18 19
        on right: 27 28
    argument_expression_list (61)
        on left: 20 21
        on right: 19 21
    map_array (62)
        on left: 22 23
        on right: 23 25 27 79 81 83 85 87 89
    lhs_expression (63)
        on left: 24 25
        on right: 26 63 84 85
    postfix_expression (64)
        on left: 26 27 28 29
        on right: 34 35
    unary_expression (65)
        on left: 30 31 32 33 34 35
        on right: 30 31 32 33 36 37 38 39
    multiplicative_expression (66)
        on left: 36 37 38 39
        on right: 37 38 39 40 41 42
    additive_expression (67)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression (68)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression (69)
        on left: 48 49 50
        on right: 49 50 51 52
    and_expression (70)
        on left: 51 52
        on right: 52 53 54
    exclusive_or_expression (71)
        on left: 53 54
        on right: 54 55 56
    inclusive_or_expression (72)
        on left: 55 56
        on right: 56 57 58
    logical_and_expression (73)
        on left: 57 58
        on right: 58 59 60
    logical_or_expression (74)
        on left: 59 60
        on right: 60 61
    expression (75)
        on left: 61
        on right: 16 20 21 22 23 62 63 78 79 80 81 82 83 93 103 104 105 106 107
    assignment_statement (76)
        on left: 62 63
        on right: 77 96 97 98 99 100 101 109
    declaration_statement (77)
        on left: 64
        on right: 98 99 116
    declaration_specifier (78)
        on left: 65 66 67
        on right: 8 11 64 66 67
    init_declarator_list (79)
        on left: 68 69
        on right: 64 69
    init_declarator (80)
        on left: 70 71
        on right: 68 69
    type_specifier (81)
        on left: 72 73 74 75
        on right: 65
    declarator (82)
        on left: 76
        on right: 70 71
    initializer (83)
        on left: 77
        on right: 71
    push_pop_statement (84)
        on left: 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 114
    compound_statement (85)
        on left: 90 91
        on right: 8 96 97 98 99 100 101 110
    expression_statement (86)
        on left: 92 93
        on right: 96 97 98 99 100 101
    loop_statement (87)
        on left: 95
        on right: 111
    $@2 (88)
        on left: 94
        on right: 95
    iteration_statement (89)
        on left: 96 97 98 99 100 101
        on right: 95
    return_statement (90)
        on left: 102 103
        on right: 112
    print_statement (91)
        on left: 104
        on right: 113
    chaining_if_else (92)
        on left: 105 106 107
        on right: 107 108
    if_else_statement (93)
        on left: 108
        on right: 115
    statement (94)
        on left: 109 110 111 112 113 114 115 116
        on right: 97 99 101 117 118
    statement_list (95)
        on left: 117 118
        on right: 2 91 105 106 107 118


State 0

    0 $accept: • start_rule $end

    $default  reduce using rule 4 (set_up_section)

    start_rule      go to state 1
    set_up_section  go to state 2


State 1

    0 $accept: start_rule • $end

    $end  shift, and go to state 3


State 2

    1 start_rule: set_up_section • program_body
    5 set_up_section: set_up_section • function_declaration
    6               | set_up_section • set_statement

    IDENTIFIER  shift, and go to state 4
    CONSTANT    shift, and go to state 5
    NOT         shift, and go to state 6
    INT         shift, and go to state 7
    FLOAT       shift, and go to state 8
    SET         shift, and go to state 9
    SIZE        shift, and go to state 10
    RETURN      shift, and go to state 11
    PRINT       shift, and go to state 12
    '('         shift, and go to state 13
    '['         shift, and go to state 14
    '~'         shift, and go to state 15
    '-'         shift, and go to state 16
    '+'         shift, and go to state 17
    '<'         shift, and go to state 18
    '{'         shift, and go to state 19

    LOOP      reduce using rule 94 ($@2)
    FUNC      reduce using rule 7 ($@1)
    $default  reduce using rule 3 (program_body)

    program_body               go to state 20
    function_declaration       go to state 21
    $@1                        go to state 22
    set_statement              go to state 23
    primary_expression         go to state 24
    function_call              go to state 25
    lhs_expression             go to state 26
    postfix_expression         go to state 27
    unary_expression           go to state 28
    multiplicative_expression  go to state 29
    additive_expression        go to state 30
    relational_expression      go to state 31
    equality_expression        go to state 32
    and_expression             go to state 33
    exclusive_or_expression    go to state 34
    inclusive_or_expression    go to state 35
    logical_and_expression     go to state 36
    logical_or_expression      go to state 37
    expression                 go to state 38
    assignment_statement       go to state 39
    declaration_statement      go to state 40
    declaration_specifier      go to state 41
    type_specifier             go to state 42
    push_pop_statement         go to state 43
    compound_statement         go to state 44
    loop_statement             go to state 45
    $@2                        go to state 46
    return_statement           go to state 47
    print_statement            go to state 48
    if_else_statement          go to state 49
    statement                  go to state 50
    statement_list             go to state 51


State 3

    0 $accept: start_rule $end •

    $default  accept


State 4

   18 function_call: IDENTIFIER • '(' ')'
   19              | IDENTIFIER • '(' argument_expression_list ')'
   24 lhs_expression: IDENTIFIER •
   25               | IDENTIFIER • map_array
   78 push_pop_statement: IDENTIFIER • BACKWARD_ACCESS '[' expression ']'
   79                   | IDENTIFIER • map_array BACKWARD_ACCESS '[' expression ']'
   82                   | IDENTIFIER • FORWARD_ACCESS '[' expression ']'
   83                   | IDENTIFIER • map_array FORWARD_ACCESS '[' expression ']'
   86                   | IDENTIFIER • FORWARD_ACCESS '[' ']'
   87                   | IDENTIFIER • map_array FORWARD_ACCESS '[' ']'

    FORWARD_ACCESS   shift, and go to state 52
    BACKWARD_ACCESS  shift, and go to state 53
    '('              shift, and go to state 54
    '['              shift, and go to state 55

    $default  reduce using rule 24 (lhs_expression)

    map_array  go to state 56


State 5

   17 primary_expression: CONSTANT •

    $default  reduce using rule 17 (primary_expression)


State 6

   30 unary_expression: NOT • unary_expression

    IDENTIFIER  shift, and go to state 57
    CONSTANT    shift, and go to state 5
    NOT         shift, and go to state 6
    SIZE        shift, and go to state 10
    '('         shift, and go to state 13
    '~'         shift, and go to state 15
    '-'         shift, and go to state 16
    '+'         shift, and go to state 17

    primary_expression  go to state 24
    function_call       go to state 25
    lhs_expression      go to state 58
    postfix_expression  go to state 27
    unary_expression    go to state 59


State 7

   72 type_specifier: INT •
   74               | INT • CONST

    CONST  shift, and go to state 60

    $default  reduce using rule 72 (type_specifier)


State 8

   73 type_specifier: FLOAT •
   75               | FLOAT • CONST

    CONST  shift, and go to state 61

    $default  reduce using rule 73 (type_specifier)


State 9

   12 set_statement: SET • INT SMALL ';'
   13              | SET • INT BIG ';'
   14              | SET • FLOAT SMALL ';'
   15              | SET • FLOAT BIG ';'

    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63


State 10

   34 unary_expression: SIZE • '[' postfix_expression ']'

    '['  shift, and go to state 64


State 11

  102 return_statement: RETURN • VOID
  103                 | RETURN • expression

    IDENTIFIER  shift, and go to state 57
    CONSTANT    shift, and go to state 5
    NOT         shift, and go to state 6
    VOID        shift, and go to state 65
    SIZE        shift, and go to state 10
    '('         shift, and go to state 13
    '~'         shift, and go to state 15
    '-'         shift, and go to state 16
    '+'         shift, and go to state 17

    primary_expression         go to state 24
    function_call              go to state 25
    lhs_expression             go to state 58
    postfix_expression         go to state 27
    unary_expression           go to state 28
    multiplicative_expression  go to state 29
    additive_expression        go to state 30
    relational_expression      go to state 31
    equality_expression        go to state 32
    and_expression             go to state 33
    exclusive_or_expression    go to state 34
    inclusive_or_expression    go to state 35
    logical_and_expression     go to state 36
    logical_or_expression      go to state 37
    expression                 go to state 66


State 12

  104 print_statement: PRINT • '(' expression ')'

    '('  shift, and go to state 67


State 13

   16 primary_expression: '(' • expression ')'

    IDENTIFIER  shift, and go to state 57
    CONSTANT    shift, and go to state 5
    NOT         shift, and go to state 6
    SIZE        shift, and go to state 10
    '('         shift, and go to state 13
    '~'         shift, and go to state 15
    '-'         shift, and go to state 16
    '+'         shift, and go to state 17

    primary_expression         go to state 24
    function_call              go to state 25
    lhs_expression             go to state 58
    postfix_expression         go to state 27
    unary_expression           go to state 28
    multiplicative_expression  go to state 29
    additive_expression        go to state 30
    relational_expression      go to state 31
    equality_expression        go to state 32
    and_expression             go to state 33
    exclusive_or_expression    go to state 34
    inclusive_or_expression    go to state 35
    logical_and_expression     go to state 36
    logical_or_expression      go to state 37
    expression                 go to state 68


State 14

   66 declaration_specifier: '[' • declaration_specifier ']'
   80 push_pop_statement: '[' • expression ']' FORWARD_ACCESS IDENTIFIER
   81                   | '[' • expression ']' FORWARD_ACCESS IDENTIFIER map_array
   84                   | '[' • lhs_expression ']' BACKWARD_ACCESS IDENTIFIER
   85                   | '[' • lhs_expression ']' BACKWARD_ACCESS IDENTIFIER map_array
   88                   | '[' • ']' BACKWARD_ACCESS IDENTIFIER
   89                   | '[' • ']' BACKWARD_ACCESS IDENTIFIER map_array

    IDENTIFIER  shift, and go to state 57
    CONSTANT    shift, and go to state 5
    NOT         shift, and go to state 6
    INT         shift, and go to state 7
    FLOAT       shift, and go to state 8
    SIZE        shift, and go to state 10
    '('         shift, and go to state 13
    '['         shift, and go to state 69
    ']'         shift, and go to state 70
    '~'         shift, and go to state 15
    '-'         shift, and go to state 16
    '+'         shift, and go to state 17
    '{'         shift, and go to state 19

    primary_expression         go to state 24
    function_call              go to state 25
    lhs_expression             go to state 71
    postfix_expression         go to state 27
    unary_expression           go to state 28
    multiplicative_expression  go to state 29
    additive_expression        go to state 30
    relational_expression      go to state 31
    equality_expression        go to state 32
    and_expression             go to state 33
    exclusive_or_expression    go to state 34
    inclusive_or_expression    go to state 35
    logical_and_expression     go to state 36
    logical_or_expression      go to state 37
    expression                 go to state 72
    declaration_specifier      go to state 73
    type_specifier             go to state 42


State 15

   31 unary_expression: '~' • unary_expression

    IDENTIFIER  shift, and go to state 57
    CONSTANT    shift, and go to state 5
    NOT         shift, and go to state 6
    SIZE        shift, and go to state 10
    '('         shift, and go to state 13
    '~'         shift, and go to state 15
    '-'         shift, and go to state 16
    '+'         shift, and go to state 17

    primary_expression  go to state 24
    function_call       go to state 25
    lhs_expression      go to state 58
    postfix_expression  go to state 27
    unary_expression    go to state 74


State 16

   32 unary_expression: '-' • unary_expression

    IDENTIFIER  shift, and go to state 57
    CONSTANT    shift, and go to state 5
    NOT         shift, and go to state 6
    SIZE        shift, and go to state 10
    '('         shift, and go to state 13
    '~'         shift, and go to state 15
    '-'         shift, and go to state 16
    '+'         shift, and go to state 17

    primary_expression  go to state 24
    function_call       go to state 25
    lhs_expression      go to state 58
    postfix_expression  go to state 27
    unary_expression    go to state 75


State 17

   33 unary_expression: '+' • unary_expression
